# robot_env_publisher

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: TimeControl.cfg
config/: generate_obstacles.py  generate_wall.py  obstacles_1.yaml  obstacles_2.yaml  obstacles_T.yaml
include/robot_env_publisher/: obstacle_interface.hpp  parse_helper.hpp
launch/: check_env_scene.launch  check_env_scene.rviz  check_env_scene_slidebar.launch  file_env_node.launch  obstacles_publisher.launch
scene/: figureA1.yaml  figureA11.yaml  figureA1_11.yaml  figureA1_12.yaml  figureA1_13.yaml  figureA1_14.yaml  figureA1_15.yaml  figureA1_16.yaml  figureA1_17.yaml  figureA1_18.yaml  figureA1_19.yaml  figureA1_20.yaml  figureA1_21.yaml  figureA1_22.yaml  figureA1_23.yaml  figureA1_24.yaml  figureA1_25.yaml  figureA1_26.yaml  figureA1_27.yaml  figureA1_28.yaml  figureA1_29.yaml  figureA1_30.yaml  figureA2.yaml  figureA3.yaml  figureA33.yaml  figureB1.yaml  figureB2.yaml  figureB2_11.yaml  figureB2_12.yaml  figureB2_13.yaml  figureB2_14.yaml  figureB2_15.yaml  figureB2_16.yaml  figureB2_17.yaml  figureB2_18.yaml  figureB2_19.yaml  figureB2_20.yaml  figureB2_21.yaml  figureB2_22.yaml  figureB2_23.yaml  (+15 more)
scripts/: publish_clock.py  publish_clock_slidebar.py
src/: file_env_node.cpp  obstacle_interface.cpp  obstacle_publisher.cpp
